# zone_FD_new

./: CMakeLists.txt  EULERWCNS5t=0.0000.cgns  EULERWCNS5t=1.8000.cgns  README.md  helloConfig.h.in  main.cpp  order.txt  symmetrytest.cpp  timeInfo.txt  wget-log  zoneMain.cpp
cases/: EULERWCNS5t=0.0000.cgns  EULERWCNS5t=1.8000.cgns  timeInfo.txt
cases/Sedov       t=0.0010/: 4.lay  TENO.cgns  TENOA.cgns  TENOAS.cgns  TENOS.cgns
cases/Shu-Osher  t=1.8000/: Teno5_A_S_whf.cgns  Teno5_A_whf.cgns  Teno5_LAD_S_whf.cgns  Teno5_LAD_whf.cgns  Teno5_S_whf.cgns  Teno5_Z.cgns  Teno5_exact 2001.cgns
cases/lax sod tube    t=0.1400/: 4.lay  TENO.cgns  TENOA.cgns  TENOAS.cgns  TENOS.cgns
cases/sod tube    t=0.2000/: 4.lay  TENO.cgns  TENOA.cgns  TENOAS.cgns  TENOS.cgns
cases/双稀疏波   t=1.0000/: TENO.cgns  TENOA.cgns  TENOAS.cgns  TENOS.cgns
doc/: CFD 通用标记系统（CGNS）3.1.3 版用户指南.md  CFD 通用标记系统（CGNS）标准接口数据结构（SIDS）3.3.2 版规范.md  MPICH 4.2.1用户指南.md  PETSc 3.7用户指南.md
perf/: perf.data  perf.data.old
release/: CMakeCache.txt  Makefile  cmake_install.cmake  congFD  grid_c.cgns  helloConfig.h
release/src/: Makefile  cmake_install.cmake
release/utils/: Makefile  cmake_install.cmake
src/: CmakeLists.txt
src/include/: Bnds.hpp  EulerEquation1D.hpp  SourceTerm.hpp  block.hpp  blockSolver.hpp  cgnsio.hpp  data.hpp  dataManipulater.hpp  differ.hpp  differenceScheme.hpp  eigenSystem.hpp  equation.hpp  fluxPointFlux.hpp  fluxScheme.hpp  fluxSchemes.hpp  info.hpp  initializer.hpp  interScheme.hpp  macro.hpp  oneDBnd.hpp  positive_preserving.hpp  proxy.h  (+5 more)
utils/: CMakeLists.txt
(+131 files in other folders)
